2009-07-24  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Prevent a race condition when reloading the apps menu.
	Is a solution for: NB#129747

	* src/launcher/hd-launcher.c:

2009-07-24  Gordon Williams <gordon.williams@collabora.co.uk>

	Resolves 129741 - Confirmation note getting closed by tapping on 
	                  status area. 
	Regression caused by 128086's fix. Re-implemented in a better way
	by sending an X event to the existing blocker window.
	* src/util/hd-util.c
	* src/util/hd-util.h: removed hd_util_client_has_blocker
	* src/home/hd-render-manager.c: Now check xwin_modal_blocker to see
	if the window has a blocker, and if so, send a fake button release
	event to it.
	
2009-07-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#103753 Dialpad comes up on when FN and a number key is pressed
		  simultaneously.

	* src/mb/hd-comp-mgr.c
	* src/home/hd-home.c:
	  Track FN-key pressing.

	Make sure to update libmatchbox.

2009-07-23  Gordon Williams <gordon.williams@collabora.co.uk>

	This resolves 127320 - home screen panning gets stuck in middle
	* src/home/hd-home.c: Added lots of debug messages with a DRAG_DEBUG 
	  define. Fixed drag to middle of screen bug by ignoring motion events
	  (which clutter has delayed) after the stylus is released.

2009-07-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/util/hd-volume-profile.c (hd_volume_profile_init): Add a
	profile_tracker_init() call, makes the notifications work.
	Fixes: NB#129227 

2009-07-23  Gordon Williams <gordon.williams@collabora.co.uk>

	This resolves 129404 - redrawing title bar text too often
	* src/home/hd-title-bar.c: Set visibility detection on individual
	  title bar elements, so that even when status area is being updated,
	  text and buttons can be left unrendered. Also had to explicitly set
	  the group size, as it appeared to be being set to 800x480 at some
	  point.

2009-07-22  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.66
